plugins {
  id 'java'
  id 'application'
  id 'org.openjfx.javafxplugin' version '0.1.0'
}

group 'utours.ultimate.desktop'
version '1.0'

repositories {
  mavenCentral()
}

ext {
  junitVersion = '5.10.0'
}

sourceCompatibility = '21'
targetCompatibility = '21'

tasks.withType(JavaCompile).configureEach {
  options.encoding = 'UTF-8'
}

application {
  mainClass =  'utours.ultimate.desktop.MainApplication'
}

startScripts {
  defaultJvmOpts += '--module-path ../lib/ --add-modules javafx.controls,javafx.fxml'
}

javafx {
  version = '22'
  modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {

  implementation project(':u3t-core')
  implementation project(':u3t-ui-core')
  implementation project(':u3t-net-core')
  implementation project(':u3t-game-domain')
  implementation project(':u3t-client')

  annotationProcessor project(':u3t-core')

  testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
  testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
  useJUnitPlatform()
}
